<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rectangle_1"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/border_2dp"
        android:textSize="34sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/d_o_n_t_p_a"
        android:layout_width="205.4dp"
        android:layout_height="234dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal|top"
        android:singleLine="false"
        android:text="D O N 'T \nP A N I C\nI T 'S\nO R G A -\nN I C"
        android:textAppearance="@style/d_o_n_t_p_a"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="143dp"
        android:layout_height="183dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1">

        <Button
            android:id="@+id/btn_mp"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_05dp"
            android:onClick="myplantBtn"
            android:text="@string/btn_mp" />

        <Button
            android:id="@+id/btn_r"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_05dp"
            android:onClick="reminderBtn"
            android:text="@string/btn_r" />

        <Button
            android:id="@+id/btn_h"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_05dp"
            android:onClick="historyBtn"
            android:text="@string/btn_h" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>